--- a/_src/scss/components/header.scss
+++ b/_src/scss/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-end;
   align-content: center;
-  padding: 60px;
+  padding: 2rem;
 }
 
 .header-nav-list {
