--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -2,13 +2,15 @@
 @import "./components/colors.scss";
 @import "./components/decorative_components.scss";
 @import "./components/header.scss";
-@import "./components/page_layout.scss";
+@import './components/sidebar.scss';
+@import './components/userpage_info.scss';
+@import './components/userpage_fincard.scss';
+@import './components/fincard_table.scss';
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
 
 html, body, .viewport {
     width: 100%;
-    height: 100%;
     margin: 0;
   }
 body {
@@ -21,6 +23,15 @@ body {
 
 .global-wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
+  position: absolute;
+}
+
+.page-layout {
+  flex-grow: 2;
+}
+
+.page-body {
+  padding: 4rem;
 }
