--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -6,6 +6,8 @@
 @import './components/userpage_info.scss';
 @import './components/userpage_fincard.scss';
 @import './components/fincard_table.scss';
+@import './components/devices_page.scss';
+@import './components/tariffs.scss';
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
 
