--- a/_src/scss/components/decorative_components.scss
+++ b/_src/scss/components/decorative_components.scss
@@ -13,6 +13,7 @@ input {
   border: 1px solid $text-secondary;
   color: $text-primary;
   display: flex;
+  height: 1rem;
 }
 
 input[type=date]{
@@ -24,6 +25,8 @@ input.input-medium {
   padding: 0.1rem;
   font-size: 14px;
 }
+
+
 
 button {
   cursor: pointer;
@@ -65,12 +68,32 @@ button {
   align-items: center;
 }
 
+.button-large {
+  width: 100%;
+  height: 2.5rem;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+}
+
 .button-medium-with-icon {
   padding: 6px 18px 8px 12px;
 
   :first-child {
     margin-right: 8px;
   }
+}
+
+h2 {
+  font-size: 24px;
+  color: $dark-blue;
+  font-weight: 500;
+  padding: 0 2em;
 }
 
 h3 {
@@ -85,4 +108,13 @@ h4 {
   color: $dark-blue;
   font-weight: 400;
   padding: 0 2em;
+}
+
+a.orange-link {
+  color: $dark-orange;
+  text-decoration: none;
+
+  :hover {
+    color: $light-orange;
+  }
 }
