--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -8,6 +8,7 @@
 @import './components/fincard_table.scss';
 @import './components/devices_page.scss';
 @import './components/tariffs.scss';
+@import './components/login.scss';
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,500,500italic,700,700italic,900,900italic&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek-ext,greek,vietnamese);
 
